--- a/src/content/posts/top-3-toolbird-analytics-use-cases.mdx
+++ b/src/content/posts/top-3-toolbird-analytics-use-cases.mdx
@@ -20,11 +20,12 @@ As you know Toolbird Analytics, we allow you to track all traffic going through 
 
 When getting to know exactly what pages your customers visit the most, what elements on your site they click on, and how much time they spend on each subpage, you&apos;re capable of making data-driven decisions on where to improve your website for more conversions, hereby more sales. Let&apos;s dive into an example:
 
-On your [Toolbird Analytics](https://app.toolbird.io/auth/login) dashboard you see that the majority of visitors leave your landing-page before hitting the call-to-action button in the bottom. This piece of data-information indcates, that you might want to make a more seamless landing-page-flow, so your customers makes it to the bottom to take action more easily.
+On your [Toolbird Analytics](https://app.toolbird.io/auth/login) dashboard you see that the majority of visitors leave your landing-page before hitting the call-to-action button in the bottom. This piece of data-information indcates, that you might want to implement a more seamless landing-page-flow, so your customers makes it to the bottom to take action more easily.
+![alt text for screen readers](/blog-images/referrer.webp 'Text to show on mouseover')
 
 ## User experience
 
-This use case goes hand in hand with conversion optimization. As [Toolbird Analytics](https://app.toolbird.io/auth/login) provides you all the device data for all your online visitors, hereby operating system, browser and device, you&apos;re capable of adjusting the reponsivnes as much as possible, to hit the majority of your audience the best way possible.
+This use case goes hand in hand with conversion optimization. As [Toolbird Analytics](https://app.toolbird.io/auth/login) provides you all the device data for all your online visitors, hereby operating system, browser and device, you&apos;re capable of adjusting the reponsivnes as much as possible, to hit the majority of your audience optimally.
 
 ## Customer behaviour
 
