--- a/src/content/drafts/top-3-toolbird-analytics-use-cases.mdx
+++ b/src/content/drafts/top-3-toolbird-analytics-use-cases.mdx
@@ -10,27 +10,31 @@ image: /blog-images/top-10-google-analytics-alternatives.webp
 category: education
 ---
 
-As you know Toolbird Analytics, we allow you to track all traffic going through your website, including device data, page data, referrer data, geographic data and more. these are just numbers, but how can you use them to improve your product? It's broken down into three main categories:
+As you know Toolbird Analytics, we allow you to track all traffic going through your website, including device data, page data, referrer data, geographic data and more. These are just numbers, but how can you use them to improve your product? It's broken down into three main categories:
 
 -   **Conversion optimization**
 -   **User experience**
 -   **Customer behaviour**
 
-## Conversion optimization
+## 1. Conversion optimization
 
 When getting to know exactly what pages your customers visit the most, what elements on your site they click on, and how much time they spend on each subpage, you&apos;re capable of making data-driven decisions on where to improve your website for more conversions, hereby more sales. Let&apos;s dive into an example:
 
 On your [Toolbird Analytics](https://app.toolbird.io/auth/login) dashboard you see that the majority of visitors leave your landing-page before hitting the call-to-action button in the bottom. This piece of data-information indcates, that you might want to implement a more seamless landing-page-flow, so your customers makes it to the bottom to take action more easily.
 ![alt text for screen readers](/blog-images/referrer.webp 'Text to show on mouseover')
 
-## User experience
+## 2. User experience
 
 This use case goes hand in hand with conversion optimization. As [Toolbird Analytics](https://app.toolbird.io/auth/login) provides you all the device data for all your online visitors, hereby operating system, browser and device, you&apos;re capable of adjusting the reponsivnes as much as possible, to hit the majority of your audience optimally.
 
-## Customer behaviour
+## 3. Customer behaviour
 
-Toolbird offers one collective toolbox for SaaS startups in the early stages, by providing web analytics, feedback hub and user surveys in one collective place, with only a 5-minute setup. [Start your 14-day free trial today](https://app.toolbird.io/auth/login)
+With the power of custom event tracking, you&apos;re able to get an overview of what components your users interact with the most, and in what intervals.
 
-## Try Toolbird for free today
+## Conclusion
 
-Supercharge your user-driven SaaS development today with Toolbirds all-in-on user-insights toolbox. [Get 2 weeks free](https://app.toolbird.io/auth/register)
+To sum up the above, Toolbird Analytics helps you make data driven decisions on how to optimally improve your landing page for your audience, so you can convert more visitors into users, and gain more traction to your overall product.
+
+## Get 2 weeks free of Toolbird today
+
+Get better overview of your user-insights and save money with Toolbird. Get all your SaaS user-insights under one roof today: [Get 2 weeks free](https://app.toolbird.io/auth/register)
