--- a/src/content/posts/top-3-toolbird-analytics-use-cases.mdx
+++ b/src/content/posts/top-3-toolbird-analytics-use-cases.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Top 3 Toolbird Analytics use cases that you can start today'
-description: This post covers the 3 most popular ways to use Toolbird Analytics for business advantage.
+description: This post covers the top 3 most popular ways to use Toolbird Analytics to make data-driven decisions for business advantage.
 authors:
     - name: Lasse Osmann
       url: https://twitter.com/lasse_osmann
@@ -29,7 +29,7 @@ This use case goes hand in hand with conversion optimization. As [Toolbird Analy
 
 ## 3. Customer behaviour
 
-With the power of custom event tracking, you&apos;re able to get an overview of what components your users interact with the most, and in what intervals.
+With the power of custom event tracking, you&apos;re able to get an overview of what components your users interact with the most, and in what time intervals. Customize your components, sections, links and buttons based on how your users interact with them.
 
 ## Conclusion
 
