--- a/src/content/posts/standard-webhook-specifications.mdx
+++ b/src/content/posts/standard-webhook-specifications.mdx
@@ -6,7 +6,7 @@ authors:
       url: https://twitter.com/steilgaard
       avatar: https://simonmaribo.dk/simonmaribo.png
 publishedAt: 2024-07-08
-image: /blog-images/one-tool-vs-collective-toolbox.webp
+image: /blog-images/webhook02.webp
 category: education
 ---
 
