--- a/src/content/posts/implementing-webhooks-in-saas-website.mdx
+++ b/src/content/posts/implementing-webhooks-in-saas-website.mdx
@@ -6,7 +6,7 @@ authors:
       url: https://twitter.com/steilgaard
       avatar: https://simonmaribo.dk/simonmaribo.png
 publishedAt: 2024-07-09
-image: /blog-images/one-tool-vs-collective-toolbox.webp
+image: /blog-images/webhook.webp
 category: engineering
 ---
 
